lib/tools/orbit/test_output/custom_functions_test.output
QStandardPaths: wrong permissions on runtime directory /run/user/1000/, 0755 instead of 0700
Flow compiler (3rd generation)

Processing 'orbit' on http server
done in 0.11s

tests/custom_functions_test.orb: tests/custom_functions_test.orb:4:22: Parse error
fn factorial(n) = if n <= 1 then 1 else n * factorial(n - 1);
                     ^
app->exec() == 1
